syntax="proto3";

import "google/protobuf/empty.proto";

package service;

// import "gogoproto/gogo.proto";

option go_package = "pb";



service Service {
  rpc GetAddresses(google.protobuf.Empty) returns (GetAddressesResponse);
  rpc IncrementRedis(IncrementRedisRequest) returns (google.protobuf.Empty);
}

message GetAddressesResponse {
  repeated string ipv4s = 1;
}


message IncrementRedisRequest {
  string key = 1;
}
